# llama2-rs

./: .gitignore  Cargo.toml  LICENSE  README.MD
.github/workflows/: rust-ci.yaml  test.yaml
benches/: model_benchmark.rs
src/: cnd_model.rs  cnd_weights.rs  lib.rs  main.rs  model.rs  qmodel.rs  sampler.rs  test_data.rs  tokenizer.rs
tests/: file_handle_tests.rs  model_sanity_tests.rs
