[package]
name = "llama2-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
approx = "0.5.1"
byteorder = "1.4.3"
ndarray = { version = "0.15.6", features = ["rayon", "approx-0_5"] }
rand = "0.8.5"
sentencepiece = "0.11.2"
