[package]
name = "llama2-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
approx = "0.5.1"
byteorder = "1.4.3"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.2.3" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.2.3" }
clap = { version = "4.4.2", features = ["derive"] }
ndarray = { version = "0.15.6", features = ["rayon", "approx-0_5"] }
ndarray-rand = "0.14.0"
rand = "0.8.5"
tempfile = "3.8.0"
tokenizers = "0.13.4"

[profile.release]
opt-level = 3  # Highest optimization level
lto = true     # Link Time Optimizations. Can make your code smaller and faster, but can increase compile time.
codegen-units = 1  # Reduces parallel code generation which can lead to better optimization but slower compiles.
panic = 'abort'   # Aborts on panic rather than unwinding. Can lead to smaller binary and faster code but lacks stack unwinding on panic.

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "model_benchmark"
harness = false
